[package]
name = "jtag"
description = "Rust JTAG abstraction library"
repository = "https://github.com/rqou/rust-jtag"
documentation = "https://docs.rs/jtag"
license = "0BSD"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
ftdi = "0.1.3"
ftdi-mpsse = "0.1.0"
rusb = "0.9"
